Fix z-index table progress

--- a/src/css/includes/_table.scss
+++ b/src/css/includes/_table.scss
@@ -137,7 +137,7 @@
         position: absolute;
         left: 1.5rem;
         right: 1.875rem;
-        z-index: 100000 !important;
+        z-index: 1000 !important;
 
         th {
           width: 100%;
